<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Launcher3</string>
    <string name="folder_name"></string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="home_screen">Home screen</string>
    <string name="custom_actions">Custom actions</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or use custom actions</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="add_item_request_drag_hint">Touch &amp; hold to place manually</string>
    <string name="place_automatically">Add automatically</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_loading_message">Loading apps&#8230;</string>
    <string name="all_apps_no_search_results">No apps found matching \"<xliff:g example="Android" id="query">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="notifications_header">Notifications</string>
    <string name="long_press_shortcut_to_add">Touch &amp; hold to pick up a shortcut.</string>
    <string name="long_accessible_way_to_add_shortcut">Double-tap &amp; hold to pick up a shortcut or use custom actions.</string>
    <string name="out_of_space">No more room on the home screen</string>
    <string name="hotseat_out_of_space">No more room in the dock</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_button_personal_label">Personal apps list</string>
    <string name="all_apps_button_work_label">Work apps list</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="remove_drop_target_label">Remove</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="install_drop_target_label">Install</string>
    <string name="permlab_install_shortcut">Install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention</string>
    <string name="permlab_read_settings">Read home screen settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read home screen settings and shortcuts</string>
    <string name="permlab_write_settings">Write home screen settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to modify home screen settings and shortcuts</string>
    <string name="msg_no_phone_permission"><xliff:g example="Launcher3" id="app_name">%1$s</xliff:g> is not allowed to make phone calls</string>
    <string name="gadget_error_text">Widget failed to load</string>
    <string name="gadget_setup_text">Awaiting setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="disabled_app_label">Disabled <xliff:g id="app_name" example="Messenger">%1$s</xliff:g></string>
    <plurals name="badged_app_label">
        <item quantity="one"><xliff:g id="app_name" example="Messenger">%1$s</xliff:g>, has <xliff:g id="notification_count" example="1">%2$d</xliff:g> notification</item>
        <item quantity="other"><xliff:g id="app_name" example="Messenger">%1$s</xliff:g>, has <xliff:g id="notification_count" example="3">%2$d</xliff:g> notifications</item>
    </plurals>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New home screen page</string>
    <string name="folder_opened">Folder opened, <xliff:g example="5" id="width">%1$d</xliff:g> by <xliff:g example="3" id="height">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Home settings</string>
    <string name="msg_disabled_by_admin">Disabled by your admin</string>
    <string name="allow_rotation_title">Allow home screen rotation</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="icon_badging_title">Notification dots</string>
    <string name="icon_badging_desc_on">On</string>
    <string name="icon_badging_desc_off">Off</string>
    <string name="title_missing_notification_access">Notification access needed</string>
    <string name="msg_missing_notification_access">To show Notification Dots, turn on app notifications for <xliff:g example="My App" id="name">%1$s</xliff:g></string>
    <string name="title_change_settings">Change settings</string>
    <string name="icon_badging_service_title">Show notification dots</string>
    <string name="auto_add_shortcuts_label">Add new apps to home screen</string>
    <string name="auto_add_shortcuts_description">Automatically add shortcuts to newly installed apps to the home screen</string>
    <string name="icon_shape_override_label">Change icon shape</string>
    <string name="icon_shape_override_label_location">on Home screen</string>
    <string name="icon_shape_system_default">System default</string>
    <string name="icon_shape_square">Square</string>
    <string name="icon_shape_squircle">Squircle</string>
    <string name="icon_shape_circle">Circle</string>
    <string name="icon_shape_teardrop">Teardrop</string>
    <string name="icon_shape_cylinder">Cylinder</string>
    <string name="icon_shape_override_progress">Applying icon shape changes</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove the shortcut, or search for the app and install it manually.
    </string>
    <string name="app_downloading_title"><xliff:g example="Messenger" id="name">%1$s</xliff:g> downloading, <xliff:g example="30%" id="progress">%2$s</xliff:g> complete</string>
    <string name="app_waiting_download_title"><xliff:g example="Messenger" id="name">%1$s</xliff:g> waiting to install</string>
    <string name="in_smartspace">In \'At a glance\' widget</string>
    <string name="smartspace_time">Show time</string>
    <string name="smartspace_date">Show date</string>
    <string name="smartspace_preferences_in_settings">At A Glance</string>
    <string name="smartspace_preferences_in_settings_desc">Info widget at the top of the home screen</string>
    <string name="title_show_google_app">Display %1$s</string>
    <string name="pref_show_google_now_summary">@string/msg_minus_one_on_left</string>
    <string name="title_app_suggestions">Display app suggestions</string>
    <string name="summary_app_suggestions">At the top of the app drawer</string>
    <string name="app_drawer_pref_title">App drawer</string>
    <string name="dock_pref_title">Dock</string>
    <string name="hide_all_apps_icon_labels_pref_title">Hide icon labels in drawer</string>
    <string name="hide_apps">Hide apps</string>
    <string name="hide_apps_sum">Hide apps from the app drawer</string>
    <string name="restart_lawnchair_pref_title">Restart Lawnchair</string>
    <string name="restart_lawnchair_pref_summary">Re-apply all settings</string>
    <string name="show_debug_info_pref_title">Show debug info</string>
    <string name="dock_colored_google">Colored icons</string>
    <string name="hotseat_show_arrow">Show arrow</string>
    <string name="hotseat_show_page_indicator">Show page indicator</string>
    <string name="dock_style_pref_title">Dock style</string>
    <string name="dock_search_bar">Show search bar in dock</string>
    <string name="hotseat_custom_opacity">Dock opacity</string>
    <string name="all_apps_opacity_pref_title">App drawer opacity</string>
    <string name="title_all_apps_google_search">Global Search in app drawer</string>
    <string name="summary_all_apps_google_search">Display Global Search bar instead of apps search</string>
    <string name="num_hotseat_icons_pref_title">Number of icons in dock</string>
    <string name="add_settings_shortcut_title">Add settings shortcut to home screen</string>
    <string name="low_performance_mode_pref_title">Low-performance mode</string>
    <string name="dock_shadow">Dock shadow</string>
    <string name="dock_radius">Dock corner radius</string>
    <string name="dock_gradient">Use gradient dock</string>
    <string name="pref_category_icons">Icons</string>
    <string name="pref_category_weather">Weather</string>
    <string name="pref_category_theme">Style</string>
    <string name="pref_category_searchbar">Search bar</string>
    <string name="show_developer_options">Enable developer options</string>
    <string name="debug_crash_launcher">Crash the launcher</string>
    <string name="pref_show_assistant_title">Show voice search button</string>
    <string name="pref_show_assistant_summary">Display a voice search button in the search bar if supported</string>
    <string name="pref_show_as_assistant_title">Show as Assistant</string>
    <string name="pref_show_as_assistant_summary">Display an Assistant button instead of voice search if supported</string>
    <string name="current_weather_provider">Current weather provider</string>
    <string name="smartspace_time_24_h">Show time in 24 hours</string>
    <string name="pref_smartspace_widget_provider">Weather provider</string>
    <string name="pref_smartspace_event_provider">Event provider</string>
    <string name="title_all_apps_search">Show search bar</string>
    <string name="separate_work_apps_pref_title">Separate work apps from all apps</string>
    <string name="title_search_hidden_apps">Search hidden apps</string>
    <string name="summary_search_hidden_apps">Include hidden apps in search results</string>
    <string name="default_owm_key" translatable="false">17a6438b1d63d5b05f7039e7cb52cde7</string>
    <string name="default_city">Lucerne, CH</string>
    <string name="pref_weather_api_key_title">API key</string>
    <string name="pref_weather_city_title">City</string>
    <string name="pref_weather_units">Weather Units</string>
    <string name="title_use_pill_qsb">Show Pixel style search bar</string>
    <string name="two_row_dock">Two row dock</string>
    <string name="pref_dark_searchbar">Use dark searchbar</string>
    <string name="bottom_work_tab_user_education_title">Find work apps here</string>
    <string name="bottom_work_tab_user_education_body">Each work app has a badge and is kept secure by your organization. Move apps to your Home screen for easier access.</string>
    <string name="bottom_work_tab_user_education_close_button">Close</string>
</resources>