<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="pref_developerOptionsEnabled"
        android:title="@string/show_developer_options"
        android:defaultValue="false"
        android:persistent="true" />

    <Preference
        android:key="kill"
        android:title="@string/restart_lawnchair_pref_title"
        android:summary="@string/restart_lawnchair_pref_summary" />

    <SwitchPreference
        android:key="pref_showDebugInfo"
        android:title="@string/show_debug_info_pref_title"
        android:defaultValue="false"
        android:persistent="true" />

    <SwitchPreference
        android:key="pref_lowPerformanceMode"
        android:title="@string/low_performance_mode_pref_title"
        android:defaultValue="false"
        android:persistent="true" />

    <Preference
        android:key="addSettingsShortcut"
        android:title="@string/add_settings_shortcut_title"
        android:defaultValue="false"/>

    <Preference
        android:key="crashLauncher"
        android:title="@string/debug_crash_launcher"
        android:defaultValue="false"/>

    <Preference
        android:key="currentWeatherProvider"
        android:title="@string/current_weather_provider"
        android:defaultValue="false"/>
</PreferenceScreen>