<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<com.android.launcher3.views.BottomUserEducationView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="?android:attr/colorAccent"
    android:elevation="2dp"
    android:focusable="true"
    android:orientation="horizontal">

  <ImageView
      android:layout_width="134dp"
      android:layout_height="134dp"
      android:layout_marginTop="28dp"
      android:layout_marginLeft="20dp"
      android:src="@drawable/work_tab_user_education"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:orientation="vertical">

    <ImageView
        android:id="@+id/close_bottom_user_tip"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_gravity="right"
        android:contentDescription="@string/bottom_work_tab_user_education_close_button"
        android:src="@drawable/ic_close"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="roboto-medium"
        android:text="@string/bottom_work_tab_user_education_title"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/bottom_work_tab_user_education_body"
        android:textColor="@android:color/white"
        android:textSize="14sp"/>

  </LinearLayout>

</com.android.launcher3.views.BottomUserEducationView>